--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "gulpfile.js",
   "dependencies": {
     "autoprefixer-core": "^5.2.1",
-    "gulp-concat": "^2.6.0",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.1",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.2.0",
@@ -14,7 +14,8 @@
     "gulp-postcss": "^5.1.9",
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0"
+    "gulp-uglify": "^1.2.0",
+    "node-sass": "^3.2.0"
   },
   "devDependencies": {},
   "scripts": {
