--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "gulpfile.js",
   "dependencies": {
+    "angular": "^1.4.1",
     "autoprefixer-core": "^5.2.1",
-    "gulp-concat": "^2.6.0",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.1",
     "gulp-livereload": "^3.8.0",
     "gulp-minify-css": "^1.2.0",
