--- a/package.json
+++ b/package.json
@@ -2,10 +2,14 @@
   "name": "daybreak",
   "version": "1.0.0",
   "description": "",
-  "main": "gulpfile.js",
+  "main": "app.js",
   "dependencies": {
     "angular": "^1.4.1",
     "autoprefixer-core": "^5.2.1",
+    "body-parser": "^1.10.2",
+    "cookie-parser": "~1.3.3",
+    "debug": "~2.1.1",
+    "express": "^4.11.2",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.1",
@@ -16,20 +20,14 @@
     "gulp-sass": "^2.0.3",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.2.0",
-    "node-sass": "^3.2.0", 
-    "body-parser": "~1.10.2",
-    "cookie-parser": "~1.3.3",
-    "debug": "~2.1.1",
-    "express": "~4.11.1",
-    "gulp-nodemon": "^2.0.3",
     "jade": "~1.9.1",
     "method-override": "^2.3.3",
     "mongodb": "~2.0.33",
     "mongoose": "^4.0.6",
     "monk": "~1.0.1",
     "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0"
- },
+    "node-sass": "^3.2.0"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
