--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "mongoose": "^4.0.6",
     "monk": "~1.0.1",
     "morgan": "~1.5.1",
-    "node-sass": "^3.2.0"
+    "node-sass": "^3.2.0", 
+    "fileupload": "^0.3.0",
+    "connect-busboy": "0.0.2"
   },
   "devDependencies": {},
   "scripts": {
