--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mongoose": "^4.0.6",
     "monk": "~1.0.1",
     "morgan": "~1.5.1",
-    "node-sass": "^3.2.0"
+    "node-sass": "^3.2.0",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
