--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "angular": "^1.4.1",
     "autoprefixer-core": "^5.2.1",
     "body-parser": "^1.10.2",
+    "connect-busboy": "0.0.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "^4.11.2",
+    "fileupload": "^0.3.0",
     "gulp": "^3.9.0",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.1",
@@ -26,9 +28,8 @@
     "mongoose": "^4.0.6",
     "monk": "~1.0.1",
     "morgan": "~1.5.1",
-    "node-sass": "^3.2.0", 
-    "fileupload": "^0.3.0",
-    "connect-busboy": "0.0.2"
+    "node-sass": "^3.2.0",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
