map functions in progess

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-uglify": "^1.2.0",
     "jade": "~1.9.1",
     "jwt-simple": "^0.3.0",
+    "lodash": "^3.10.1",
     "method-override": "^2.3.3",
     "mongodb": "~2.0.33",
     "mongoose": "^4.0.6",
