--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connect-busboy": "0.0.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
+    "ejs": "^2.3.4",
     "express": "^4.11.2",
     "fileupload": "^0.3.0",
     "gulp": "^3.9.0",
