--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "dependencies": {
     "angular": "^1.4.1",
+    "angular-ui-router": "^0.2.15",
     "autoprefixer-core": "^5.2.1",
     "bcrypt": "^0.8.3",
     "body-parser": "^1.10.2",
