getting daybreak up and running again

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.11.2",
     "fileupload": "^0.3.0",
     "gulp": "^3.9.0",
+    "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.11.1",
     "gulp-livereload": "^3.8.0",
@@ -27,14 +28,15 @@
     "gulp-uglify": "^1.2.0",
     "jade": "~1.9.1",
     "jwt-simple": "^0.3.0",
+    "kerberos": "0.0.23",
     "lodash": "^3.10.1",
     "method-override": "^2.3.3",
     "moment": "^2.10.6",
-    "mongodb": "~2.0.33",
+    "mongodb": "^1.4.4",
     "mongoose": "^4.0.6",
     "monk": "~1.0.1",
     "morgan": "~1.5.1",
-    "node-sass": "^3.2.0",
+    "node-sass": "^4.5.2",
     "nodemailer": "^1.4.0",
     "nodemailer-smtp-transport": "^1.0.3",
     "serve-favicon": "^2.3.0"
