--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
     "angular": "^1.4.1",
     "angular-ui-router": "^0.2.15",
     "autoprefixer-core": "^5.2.1",
-    "bcrypt": "^0.8.3",
+    "bcrypt": "^0.8.7",
     "body-parser": "^1.10.2",
     "connect-busboy": "0.0.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
-    "ejs": "^2.3.4",
+    "ejs": "^2.5.6",
     "express": "^4.11.2",
     "fileupload": "^0.3.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.0",
-    "gulp-jshint": "^1.11.1",
-    "gulp-livereload": "^3.8.0",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-nodemon": "^2.0.3",
-    "gulp-postcss": "^5.1.9",
-    "gulp-sass": "^2.0.3",
+    "gulp-jshint": "^1.12.0",
+    "gulp-livereload": "^3.8.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-postcss": "^5.1.10",
+    "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.5.2",
-    "gulp-uglify": "^1.2.0",
+    "gulp-uglify": "^1.5.4",
     "jade": "~1.9.1",
     "jwt-simple": "^0.3.0",
     "kerberos": "0.0.23",
@@ -33,13 +33,14 @@
     "method-override": "^2.3.3",
     "moment": "^2.10.6",
     "mongodb": "^1.4.4",
-    "mongoose": "^4.0.6",
+    "mongoose": "^4.9.6",
     "monk": "~1.0.1",
     "morgan": "~1.5.1",
     "node-sass": "^4.5.2",
     "nodemailer": "^1.4.0",
     "nodemailer-smtp-transport": "^1.0.3",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "uglify-js": "^2.8.22"
   },
   "devDependencies": {},
   "scripts": {
