--- a/package.json
+++ b/package.json
@@ -7,39 +7,37 @@
     "angular": "^1.4.1",
     "angular-ui-router": "^0.2.15",
     "autoprefixer-core": "^5.2.1",
-    "bcrypt": "^0.8.7",
-    "body-parser": "^1.10.2",
+    "bcryptjs": "^2.4.3",
+    "bluebird": "^3.5.0",
+    "body-parser": "^1.17.1",
     "connect-busboy": "0.0.2",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "ejs": "^2.5.6",
-    "express": "^4.11.2",
+    "express": "^4.15.2",
     "fileupload": "^0.3.0",
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.0",
     "gulp-jshint": "^1.12.0",
     "gulp-livereload": "^3.8.1",
-    "gulp-minify-css": "^1.2.4",
     "gulp-nodemon": "^2.2.1",
     "gulp-postcss": "^5.1.10",
     "gulp-sass": "^3.1.0",
     "gulp-sourcemaps": "^1.5.2",
     "gulp-uglify": "^1.5.4",
-    "jade": "~1.9.1",
     "jwt-simple": "^0.3.0",
     "kerberos": "0.0.23",
-    "lodash": "^3.10.1",
     "method-override": "^2.3.3",
     "moment": "^2.10.6",
-    "mongodb": "^1.4.4",
+    "mongodb": "~1.4",
     "mongoose": "^4.9.6",
     "monk": "~1.0.1",
     "morgan": "~1.5.1",
+    "nodemailer": "^4.0.1",
+    "nodemailer-smtp-transport": "^2.7.4",
     "node-sass": "^4.5.2",
-    "nodemailer": "^1.4.0",
-    "nodemailer-smtp-transport": "^1.0.3",
-    "serve-favicon": "^2.3.0",
+    "serve-favicon": "^2.4.2",
     "uglify-js": "^2.8.22"
   },
   "devDependencies": {},
@@ -50,7 +48,7 @@
     "type": "git",
     "url": "https://github.com/wbeck32/daybreak.git"
   },
-  "author": "Wendy Beck, Miles Hochstein, Tim McIntyre",
+  "author": "Wendy Beck, Miles Hochstein",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/wbeck32/daybreak/issues"
