--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "kerberos": "0.0.23",
     "method-override": "^2.3.3",
     "moment": "^2.10.6",
-    "mongodb": "~1.4",
+    "mongodb": "^2.2.19",
     "mongoose": "^4.9.6",
     "monk": "~1.0.1",
     "morgan": "~1.5.1",
@@ -39,6 +39,9 @@
     "node-sass": "^4.5.2",
     "serve-favicon": "^2.4.2",
     "uglify-js": "^2.8.22"
+  },
+  "engines": {
+    "node": "^7.9.0"
   },
   "devDependencies": {},
   "scripts": {
